@@ -6,6 +6,10 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       whitespaces within the var directory path on Windows. Add comment to
       revisit this later on non-Windows-platforms, too. Fixes: #916.
 
+  [ Oleksandr Shneyder ]
+  * New upstream release (4.0.5.1):
+    - xsettingswidget: compile only on Windows.
+
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 28 Jul 2015 06:05:27 +0200
 
 x2goclient (4.0.5.0-0x2go1) unstable; urgency=low
